chore: update CI workflows and add Changesets configuration
- Updated .yarnrc.yml to remove placeholder token for npmAuthToken.
- Enhanced package.json with new scripts for changeset management.
- Added Changesets configuration files for versioning and release management.
- Modified GitHub Actions workflows to integrate Changesets and adjust Node.js setup.
- Updated yarn.lock with new dependencies related to Changesets.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-webapp-gcs-cache
     steps:
       - name: Configure github
         run: |
@@ -33,6 +33,8 @@ jobs:
         run: corepack enable
 
       - name: Installing dependencies
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn install --immutable
 
       - name: Running lint
@@ -45,3 +47,6 @@ jobs:
 
       - name: Running tests & coverage
         run: yarn test --logHeapUsage --silent --runInBand --ci
+
+      - name: Check for changesets
+        run: yarn changeset-status
