chore: update CI workflows to use ubuntu-latest and add new release workflows
- Changed the build job to run on ubuntu-latest for improved compatibility.
- Added a new workflow for publishing beta packages with snapshot tagging.
- Introduced a workflow for managing Changesets releases with manual dispatch capabilities.

--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
     publish-beta:
         name: Publish Beta
-        runs-on: self-hosted-webapp-gcs-cache
+        runs-on: ubuntu-latest
         steps:
             - name: Configure git
               run: |
