--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   build:
-    runs-on: self-hosted-webapp-gcs-cache
+    runs-on: ubuntu-latest
     steps:
       - name: Configure github
         run: |
