chore: update package names and peer dependencies
- Changed package name from "valina-app" to "vanila-app" in example/vanila-todo-app/package.json.
- Updated peer dependency for "@ds-fancode/redux-rewire-core" to "workspace:^" in multiple package.json files.
- Adjusted yarn.lock to reflect the new package name and peer dependency changes.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -65,7 +65,7 @@
     "typescript": "5.7.2"
   },
   "peerDependencies": {
-    "@ds-fancode/redux-rewire-core": "*",
+    "@ds-fancode/redux-rewire-core": "workspace:^",
     "react": ">=19.2.1"
   },
   "publishConfig": {
