--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -68,7 +68,7 @@
     "react": "19.2.1"
   },
   "peerDependencies": {
-    "@ds-fancode/redux-rewire-core": "*",
+    "@ds-fancode/redux-rewire-core": "workspace:^",
     "react": ">=19.2.1"
   },
   "publishConfig": {
