chore: update Changeset status command and enhance GitHub Actions workflow
- Modified the Changeset status command in package.json to include comparison with the main branch.
- Added a step in the GitHub Actions workflow to fetch the main branch for accurate Changeset comparisons.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Fetch main branch for changeset comparison
+        run: git fetch origin main:main
+
       - uses: actions/setup-node@v3
         with:
           node-version: 22.9.0
