Fix/test cases fixes and cicd (#27)
* chore: update CI workflows and add Changesets configuration

- Updated .yarnrc.yml to remove placeholder token for npmAuthToken.
- Enhanced package.json with new scripts for changeset management.
- Added Changesets configuration files for versioning and release management.
- Modified GitHub Actions workflows to integrate Changesets and adjust Node.js setup.
- Updated yarn.lock with new dependencies related to Changesets.

* feat: add GitHub Actions workflow for publishing beta packages

- Introduced a new workflow to publish beta versions of packages to GitHub Packages.
- Configured steps for git setup, Node.js environment, dependency installation, and package versioning using Changesets.
- Implemented snapshot tagging based on branch name and commit hash for better version tracking.
- Added summary output for installation instructions post-publishing.

* feat: add GitHub Actions workflow for manual and automated package publishing

- Introduced a new workflow for managing package releases using Changesets.
- Configured steps for git setup, Node.js environment, dependency installation, and versioning.
- Supports both automated version PR creation on push and manual package publishing on workflow dispatch.

* chore: update CI workflows to use ubuntu-latest and add new release workflows

- Changed the build job to run on ubuntu-latest for improved compatibility.
- Added a new workflow for publishing beta packages with snapshot tagging.
- Introduced a workflow for managing Changesets releases with manual dispatch capabilities.

* bug fixes

* chore: update package names and peer dependencies

- Changed package name from "valina-app" to "vanila-app" in example/vanila-todo-app/package.json.
- Updated peer dependency for "@ds-fancode/redux-rewire-core" to "workspace:^" in multiple package.json files.
- Adjusted yarn.lock to reflect the new package name and peer dependency changes.

* chore: update GitHub Actions build workflow to fetc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
 
       - name: Checkout branch
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Fetch main branch for changeset comparison
+        run: git fetch origin main:main
 
       - uses: actions/setup-node@v3
         with:
@@ -33,15 +38,28 @@ jobs:
         run: corepack enable
 
       - name: Installing dependencies
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn install --immutable
 
       - name: Running lint
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           yarn lint
 
       - name: Running prettier
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           yarn prettier-check
 
       - name: Running tests & coverage
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn test --logHeapUsage --silent --runInBand --ci
+
+      - name: Check for changesets
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn changeset-status
