Refactor GitHub Actions workflows for package publishing (#28)
* Refactor GitHub Actions workflows for package publishing

- Updated workflow names for clarity, changing "Publish Beta" to "Publish from Feature Branch" and "Changesets Release" to "Publish Guth".
- Enhanced environment variable handling by adding `GH_TOKEN` to relevant steps for improved security during dependency installation and publishing.
- Standardized formatting and indentation across the workflows for better readability.
- Ensured consistent use of `yarn install --immutable` for dependency management in all workflows.

* Update workflow name in GitHub Actions for clarity, changing "Publish Guth" to "Publish Github".

--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -1,4 +1,4 @@
-name: Changesets Release
+name: Publish Github
 
 on:
   workflow_dispatch:
@@ -33,6 +33,8 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn install --immutable
 
       # On push to main: Only create Version PR (no publish)
