--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -37,6 +37,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn install --immutable
 
+      - name: Creating .npmrc
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> "$HOME/.npmrc"
+          echo "@ds-fancode:registry=https://npm.pkg.github.com" >> "$HOME/.npmrc"
+
       # On push to main: Only create Version PR (no publish)
       - name: Create Release Pull Request
         if: github.event_name == 'push'
@@ -44,7 +49,7 @@ jobs:
         with:
           version: yarn changeset-version
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # On manual dispatch: Publish packages
       - name: Publish to GitHub Packages
