Update beta release workflow and package.json for private setting
- Modified the GitHub Actions workflow to publish beta packages without creating a git tag by adding the `--no-git-tag` option.
- Set the `private` field to true in the ssr-app's package.json to prevent accidental publication to the npm registry.

--- a/example/ssr-app/package.json
+++ b/example/ssr-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ssr-app",
+  "private": true,
   "type": "commonjs",
   "scripts": {
     "start": "NODE_ENV=development webpack --watch",
