--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Publish beta to GitHub Packages
         if: ${{ steps.snapshot.outputs.tag != '' }}
-        run: yarn changeset publish --tag ${{ steps.snapshot.outputs.tag }}
+        run: yarn changeset publish --tag ${{ steps.snapshot.outputs.tag }} --no-git-tag
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
