Enhance GitHub Actions workflows by re-enabling .npmrc creation step in release-beta.yml and adding push trigger for main branch in release-github.yml. This improves package publishing configuration and ensures workflows are triggered on main branch updates.

--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -59,10 +59,10 @@ jobs:
           yarn workspace @ds-fancode/redux-rewire-react build
           yarn workspace @ds-fancode/redux-rewire build
 
-      # - name: Creating .npmrc
-      #   run: |
-      #     echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> "$HOME/.npmrc"
-      #     echo "@ds-fancode:registry=https://npm.pkg.github.com" >> "$HOME/.npmrc"
+      - name: Creating .npmrc
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> "$HOME/.npmrc"
+          echo "@ds-fancode:registry=https://npm.pkg.github.com" >> "$HOME/.npmrc"
 
       - name: Publish beta to GitHub Packages
         if: ${{ steps.snapshot.outputs.tag != '' }}
